objects/hoopla__Position__c.object
<CustomObject>
    <description>A position defines a Player&apos;s default display stats and career stats and is the basis for much of the default display characteristics of a Player.</description>
    <fields>
        <fullName>hoopla__Career_Stat_Type__c</fullName>
        <description>The granularity used to track career stats</description>
        <label>Career Stat Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hoopla__Description__c</fullName>
        <description>A user provided description of this position</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hoopla__Period__c</fullName>
        <description>Start period for tracking career stats.</description>
        <label>Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hoopla__Year__c</fullName>
        <description>Start year for tracking career stats</description>
        <label>Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>